objects/SFDC_ACCOUNT_SITE_SALES__x.object
<CustomObject>
    <fields>
        <fullName>TY_PAPER_SALES_AMT__c</fullName>
        <description>TY_PAPER_SALES_AMT</description>
        <externalDeveloperName>TY_PAPER_SALES_AMT</externalDeveloperName>
        <label>TY_PAPER_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_QTD_AOV__c</fullName>
        <description>TY_QTD_AOV</description>
        <externalDeveloperName>TY_QTD_AOV</externalDeveloperName>
        <label>TY_QTD_AOV</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_QTD_IMU_AMT__c</fullName>
        <description>TY_QTD_IMU_AMT</description>
        <externalDeveloperName>TY_QTD_IMU_AMT</externalDeveloperName>
        <label>TY_QTD_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_QTD_ORDERS__c</fullName>
        <description>TY_QTD_ORDERS</description>
        <externalDeveloperName>TY_QTD_ORDERS</externalDeveloperName>
        <label>TY_QTD_ORDERS</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_QTD_SALES_AMT__c</fullName>
        <description>TY_QTD_SALES_AMT</description>
        <externalDeveloperName>TY_QTD_SALES_AMT</externalDeveloperName>
        <label>TY_QTD_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_TECH_IMU_AMT__c</fullName>
        <description>TY_TECH_IMU_AMT</description>
        <externalDeveloperName>TY_TECH_IMU_AMT</externalDeveloperName>
        <label>TY_TECH_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_TECH_SALES_AMT__c</fullName>
        <description>TY_TECH_SALES_AMT</description>
        <externalDeveloperName>TY_TECH_SALES_AMT</externalDeveloperName>
        <label>TY_TECH_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_WRITING_IMU_AMT__c</fullName>
        <description>TY_WRITING_IMU_AMT</description>
        <externalDeveloperName>TY_WRITING_IMU_AMT</externalDeveloperName>
        <label>TY_WRITING_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_WRITING_SALES_AMT__c</fullName>
        <description>TY_WRITING_SALES_AMT</description>
        <externalDeveloperName>TY_WRITING_SALES_AMT</externalDeveloperName>
        <label>TY_WRITING_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_YTD_AOV__c</fullName>
        <description>TY_YTD_AOV</description>
        <externalDeveloperName>TY_YTD_AOV</externalDeveloperName>
        <label>TY_YTD_AOV</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_YTD_IMU_AMT__c</fullName>
        <description>TY_YTD_IMU_AMT</description>
        <externalDeveloperName>TY_YTD_IMU_AMT</externalDeveloperName>
        <label>TY_YTD_IMU_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_YTD_ORDERS__c</fullName>
        <description>TY_YTD_ORDERS</description>
        <externalDeveloperName>TY_YTD_ORDERS</externalDeveloperName>
        <label>TY_YTD_ORDERS</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TY_YTD_SALES_AMT__c</fullName>
        <description>TY_YTD_SALES_AMT</description>
        <externalDeveloperName>TY_YTD_SALES_AMT</externalDeveloperName>
        <label>TY_YTD_SALES_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WEEKLY_ORDER_FLG__c</fullName>
        <description>WEEKLY_ORDER_FLG</description>
        <externalDeveloperName>WEEKLY_ORDER_FLG</externalDeveloperName>
        <label>WEEKLY_ORDER_FLG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEEKLY_SALES_FLG__c</fullName>
        <description>WEEKLY_SALES_FLG</description>
        <externalDeveloperName>WEEKLY_SALES_FLG</externalDeveloperName>
        <label>WEEKLY_SALES_FLG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEEKS_SINCE_FIRST_ORDER__c</fullName>
        <description>WEEKS_SINCE_FIRST_ORDER</description>
        <externalDeveloperName>WEEKS_SINCE_FIRST_ORDER</externalDeveloperName>
        <label>WEEKS_SINCE_FIRST_ORDER</label>
        <length>39</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEEKS_SINCE_LAST_ORDER__c</fullName>
        <description>WEEKS_SINCE_LAST_ORDER</description>
        <externalDeveloperName>WEEKS_SINCE_LAST_ORDER</externalDeveloperName>
        <label>WEEKS_SINCE_LAST_ORDER</label>
        <length>39</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WRITING_LAST_ORDER_AMT__c</fullName>
        <description>WRITING_LAST_ORDER_AMT</description>
        <externalDeveloperName>WRITING_LAST_ORDER_AMT</externalDeveloperName>
        <label>WRITING_LAST_ORDER_AMT</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRITING_LAST_ORDER_DT_TXT__c</fullName>
        <description>WRITING_LAST_ORDER_DT_TXT</description>
        <externalDeveloperName>WRITING_LAST_ORDER_DT_TXT</externalDeveloperName>
        <label>WRITING_LAST_ORDER_DT_TXT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>SFDC_ACCOUNT_SITE_SALES</label>
    <pluralLabel>SFDC_ACCOUNT_SITE_SALES</pluralLabel>
</CustomObject>